# periodic

./: README.rst  requirements.txt  setup.cfg  setup.py
src/periodic/: __init__.py
tests/: periodic3_tests.py
