[metadata]
name = periodic 
version = attr: periodic.__version__
author = Gerard 
author_email = gweatherby@uchc.edu 
description = A periodic table API 
long_description = file: README.rst 
long_description_content_type = text/x-rst
license = GNU GPL
keywords = chem chemistry periodic table finder elements
url = 'https://github.com/doubledubba/periodic

[options]
#include_package_data = True
package_dir = 
	= src
packages = 
	periodic
install_requires =

[options.entry_points]
console_scripts = 
	periodic = periodic.main:main 

[build_ext]
debug = 1

#[options.package_data]
#example = data/schema.json, *.txt
#* = README.md
