[metadata]
name = periodic2023
version = attr: periodic.__version__
author = Gerard 
author_email = gweatherby@uchc.edu 
description = Expired 
long_description = file: README.rst 
long_description_content_type = text/x-rst
license = GNU GPL
keywords = chem chemistry periodic table finder elements

[options]
#include_package_data = True
package_dir = 
	= src
packages = 
	periodic
install_requires =

